# lattice

./: .gitignore  Makefile  README.md  noxfile.py  pyproject.toml
configs/: example.yaml  ftx_bot.yaml  live_strategy.yaml  local_backtest.yaml  local_gnn.yaml  my_ftx_strategy.yaml
data/: .gitignore  markets.csv
data/365_days_60_seconds/: AVAX_BTC.parquet  AVAX_USD.parquet  AVAX_USDT.parquet
data/365_days_900_seconds/: AAVE_USD.parquet  AAVE_USDT.parquet  AUD_USD.parquet  AVAX_BTC.parquet  AVAX_USD.parquet  AVAX_USDT.parquet  BAT_USD.parquet  BCH_BTC.parquet  BCH_USD.parquet  BCH_USDT.parquet  BRZ_USD.parquet  BRZ_USDT.parquet  BTC_AUD.parquet  BTC_BRZ.parquet  BTC_EUR.parquet  BTC_USD.parquet  BTC_USDT.parquet  CAD_USD.parquet  CUSDT_USD.parquet  CUSDT_USDT.parquet  DAI_USD.parquet  DAI_USDT.parquet  DOGE_BTC.parquet  DOGE_USD.parquet  DOGE_USDT.parquet  ETH_AUD.parquet  ETH_BTC.parquet  ETH_EUR.parquet  ETH_USD.parquet  ETH_USDT.parquet  EUR_USD.parquet  GBP_USD.parquet  GRT_USD.parquet  KSHIB_USD.parquet  LINK_BTC.parquet  LINK_USD.parquet  LINK_USDT.parquet  LTC_BTC.parquet  LTC_USD.parquet  LTC_USDT.parquet  (+22 more)
lattice/: _test.py  broker.py  config.py  experimentation.py  features.py  investor.py  market.py  order.py  paths.py  test.py  wallet.py
lattice/clients/: __init__.py  ftx_client.py
lattice/exchanges/: ftx_client.py
lattice/investor/: assets.py  broker.py  investor.py  market.py  order.py  portfolio.py  wallet.py
lattice/models/: gnn.py
lattice/notebooks/: data_inspection.ipynb
lattice/simulations/: backtest.py  example.py  train.py
lattice/utils/: conversions.py  convert_to_pqdb.py  get_historical.py  get_historical_data.py  io.py  logging.py  paths.py  plotting.py  report.py
notebooks/: data_inspection.ipynb
