[project]
name = "lattice"
version = "0.1.0"
description = ""
authors = [
    {name = "magi-1", email = "mechior.magi@gmail.com"},
]
dependencies = [
    "jax[cpu]>=0.3.7",
    "flax>=0.4.1",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
