[project]
name = "lattice"
version = "0.1.0"
description = ""
authors = [
    {name = "magi-1", email = "mechior.magi@gmail.com"},
]
dependencies = [
    "jax[cpu]>=0.3.7",
    "flax>=0.4.1",
    "python-dotenv>=0.20.0",
    "requests>=2.27.1",
    "pyarrow>=7.0.0",
    "pandas>=1.4.2",
    "tqdm>=4.64.0",
    "notebook>=6.4.11",
    "plotly==5.7.0",
    "seaborn>=0.11.2",
    "pyyaml>=6.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
