[project]
name = "lattice"
version = "0.1.0"
description = ""
authors = [
    {name = "magi-1", email = "mechior.magi@gmail.com"},
]
dependencies = [
    "jax[cpu]>=0.3.7",
    "flax>=0.4.1",
    "python-dotenv>=0.20.0",
    "requests>=2.27.1",
    "pandas>=1.4.2",
    "tqdm>=4.64.0",
    "notebook>=6.4.11",
    "plotly==5.7.0",
    "seaborn>=0.11.2",
    "pyyaml>=6.0",
    "strictyaml>=1.6.1",
    "polars>=0.13.25",
    "click>=8.1.3",
    "nox>=2022.1.7",
    "jraph>=0.0.2.dev0",
    "dm-haiku>=0.0.6",
]
requires-python = ">=3.8"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
